Database testing (#7)
* Database Tests
* Remove Block
* Documentation fixes
* Upgrade to JDK 17
* Use GitHub Actions
* Update: badges in main README.md